2009-08-28  Jürg Billeter  <j@bitron.ch>

	* libtinymail-camel/tny-camel-msg.c: (tny_camel_msg_parse):
	* libtinymail-camel/tny-camel-msg.h: add function to parse message
	from stream

2009-08-27  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-maemo/tny-maemo-conic-device.c
	(tny_maemo_conic_device_reset): clear the priv->iap when reseting
	the device as it will be no longer valid.

	* camel/camel-mime-part.c (camel_mime_part_set_filename): if the
	mime-type does not have mime-type then set it as
	octet-stream. Merged from Camel upstream

2009-08-20  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-folder.c (do_notify_in_idle_destroy)
	(notify_folder_observers_about_in_idle): add a reference to the
	folder summary before notifying the observers in order to keep
	alive the summary instance the TnyCamelHeaders point to.

	* libedataserver/e-iconv.c (e_iconv_open)
	(e_iconv_charset_language): added a couple of extra checks to
	prevent crashes with malformed emails with large amounts of data
	in the charset field

2009-08-19  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/camel-lite/camel/camel-tcp-stream-ssl.c: on calls to
	PR_Poll with a timeout, we didn't take into account properly the case
	we reached the timeout, and it could be creating infinite loops if
	connection failed but didn't die.

2009-08-19  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/camel-lite/camel/providers/pop3/camel-pop3-folder.c (cmd_totop):
	protect a buffer passed to strlen with the null character '\0' in
	order to fix a conditional jump reported by valgrind

2009-08-18  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-maemo/tny-maemo-conic-dummy-device.c
	(tny_maemo_conic_device_reset): do really reset the device
	state. Try to set the new status.
	(dummy_con_ic_connection_connect_by_id_async_cb): set the new
	connection status if the connection request was canceled. Added